# BitChat

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-and-test.yml
android/: BitChatCore.kt  CMakeLists.txt  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/bitchat/app/: BitChatApplication.kt
android/app/src/main/java/com/bitchat/data/local/converter/: ByteArrayConverter.kt
android/app/src/main/java/com/bitchat/data/local/db/: BitChatDatabase.kt  ChatMessageDao.kt  ContactDao.kt
android/app/src/main/java/com/bitchat/data/local/entity/: ChatMessageEntity.kt  ContactEntity.kt
android/app/src/main/java/com/bitchat/data/repository/: ContactRepository.kt  IdentityRepository.kt  MessageRepository.kt
android/app/src/main/java/com/bitchat/di/: AppModule.kt  CoreModule.kt  DatabaseModule.kt
android/app/src/main/java/com/bitchat/domain/model/: ChatMessage.kt  Contact.kt  UserIdentity.kt
android/app/src/main/java/com/bitchat/domain/util/: PubKeyUtils.kt
android/app/src/main/java/com/bitchat/service/: BitChatService.kt
android/app/src/main/java/com/bitchat/ui/: MainActivity.kt
android/app/src/main/java/com/bitchat/ui/chatlist/: ChatListScreen.kt  ChatListViewModel.kt
android/app/src/main/java/com/bitchat/ui/components/: AvatarView.kt  EmptyState.kt  MessageBubble.kt
android/app/src/main/java/com/bitchat/ui/contacts/: AddContactScreen.kt  ContactListScreen.kt  ContactsViewModel.kt
android/app/src/main/java/com/bitchat/ui/conversation/: ConversationScreen.kt  ConversationViewModel.kt
android/app/src/main/java/com/bitchat/ui/navigation/: NavGraph.kt  Screen.kt
android/app/src/main/java/com/bitchat/ui/onboarding/: OnboardingScreen.kt  OnboardingViewModel.kt
android/app/src/main/java/com/bitchat/ui/profile/: ProfileScreen.kt  ProfileViewModel.kt
android/app/src/main/java/com/bitchat/ui/qrcode/: QrCodeScreen.kt  QrCodeViewModel.kt  QrScannerScreen.kt
android/app/src/main/java/com/bitchat/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
include/bitchat/: error.h
include/bitchat/bridge/: bitchat_ffi.h
include/bitchat/domain/: identity.h  message.h  peer.h
include/bitchat/infra/: storage_sqlite.h  transport_udp_sim.h
include/bitchat/port/: storage.h  transport.h
include/bitchat/usecase/: crypto_manager.h  mesh_router.h  message_store.h  node_discovery.h
src/bridge/: bitchat_ffi.c  bitchat_jni.c
src/cli/: main.c
src/domain/: identity.c  message.c  peer.c
src/infra/: storage_sqlite.c  transport_ble.c  transport_udp_sim.c  transport_wifi.c
src/usecase/: crypto_manager.c  mesh_router.c  message_store.c  node_discovery.c
tests/: CMakeLists.txt  test_crypto_manager.c  test_mesh_router.c  test_message.c  test_node_discovery.c
